# KetabMind

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  Makefile  README.md  autoscaler.py  docker-compose.yml  fitz.py  pyproject.toml  requirements-dev.txt  worker.py  ws_server.py
.github/workflows/: build.yml  ci.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_add_owner_id.py  0003_add_session_deleted_at.py  0004_add_bookmark_tag.py  0005_add_book_vector_id.py
answering/: __init__.py  budget.py  citations.py  evidence_map.py  guardrails.py
app/: __init__.py  main.py
apps/: __init__.py
apps/api/: Dockerfile  main.py  schemas.py
apps/api/auth/: __init__.py  jwt.py
apps/api/db/: __init__.py  base.py  init.py  models.py  repositories.py  session.py
apps/api/middleware/: request_id.py
apps/api/routes/: books.py  query.py
apps/api/services/: __init__.py  books.py  users.py
apps/ui/: .dockerignore  Dockerfile  README.md  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
apps/ui/__tests__/: BookDetailsPage.test.tsx  BooksPage.test.tsx  ChatPage.test.tsx  Navbar.test.tsx  ProtectedRoute.test.tsx  ThemeSnapshots.test.tsx  UploadPage.test.tsx  ViewerPage.test.tsx  useRTL.test.tsx
apps/ui/__tests__/__snapshots__/: ChatPage.test.tsx.snap  ThemeSnapshots.test.tsx.snap
apps/ui/app/: globals.css  layout.tsx  providers.tsx
apps/ui/app/(auth)/login/: page.tsx
apps/ui/app/(protected)/: layout.tsx
apps/ui/app/(protected)/books/: api.ts  page.tsx
apps/ui/app/(protected)/chat/: page.tsx  types.ts
apps/ui/app/(protected)/upload/: page.tsx
apps/ui/app/(protected)/viewer/: page.tsx
apps/ui/app/components/: Navbar.tsx  ProtectedRoute.tsx
apps/ui/app/components/Chat/: BookSidebar.tsx
apps/ui/app/context/: AuthContext.tsx  ThemeContext.tsx
apps/ui/app/hooks/: useRTL.ts
apps/ui/e2e/: full-flow.spec.ts
apps/ui/pages/: index.js
backend/: local_llm.py  local_qdrant.py  main.py
caching/: __init__.py  lru.py
cli/: __init__.py  ingest_cli.py
core/: __init__.py  config.py  logging.py
core/answer/: answerer.py  llm.py  mock.py  template.py
core/chunk/: chunker.py  sliding.py
core/embed/: __init__.py  adapter.py  base.py  bge.py  fallback.py  mock.py
core/eval/: offline.py  offline_eval.py
core/fts/: __init__.py  sqlite.py
core/index/: __init__.py  indexer.py
core/ingest/: epub.py  pdf.py  pdf_to_text.py
core/retrieve/: retriever.py  simple.py
core/self_rag/: runner.py  validator.py  verify.py
core/stego/: __init__.py  huffman.py
core/vector/: qdrant.py  qdrant_client.py
data/: app.db  eval.jsonl  tmp_stream.db
data/ollama/: id_ed25519  id_ed25519.pub
data/qdrant/: raft_state.json
docs/: README.md  sample1.txt  sample2.txt  ws_testing.md
docs/fixtures/: sample.epub
embedding/: __init__.py  adapter.py
exporting/: __init__.py  exporter.py
fastapi/: __init__.py  _stub.py  responses.py  testclient.py
fastapi/middleware/: __init__.py  cors.py  request_id.py
grafana/provisioning/dashboards/: dashboards.yml  ketabmind-api.json
grafana/provisioning/datasources/: datasource.yml
ingest/: __init__.py  clean_rules.py  ocr.py  pdf_reader.py  pipeline.py
installer/: darwin.json  linux.json  windows.json
k8s/: README.md  deployment-api.yaml  deployment-grafana.yaml  deployment-prometheus.yaml  service-api.yaml  statefulset-qdrant.yaml
lexical/: __init__.py  overlap.py
model_export/: validate_onnx_vs_pt.py
monitoring/: prometheus.yml
nlp/: fa_normalize.py
prometheus/: prometheus.yml
prompting/: __init__.py  templates.py
qdrant_client/: __init__.py
qdrant_client/http/: models.py
reranker/: __init__.py  adapter.py
resources/ingest/: rules.yaml
scoring/: hybrid.py
scripts/: backup_qdrant.sh  bench_embedding.py  bench_gpu.py  bench_local.py  bench_retrieval.py  build_desktop.sh  clear_collection.py  index_file.py  index_sample.py  restore_qdrant.sh
self_rag/: __init__.py  advanced.py
src/: App.jsx  i18n.js  index.jsx
src/hooks/: useRTL.js
src/pages/: Chat.jsx  Upload.jsx
structlog/: __init__.py  contextvars.py
tests/: conftest.py  helpers.py  test_acl.py  test_answer_prompt.py  test_api_books_management.py  test_api_cors.py  test_api_db_startup.py  test_api_health.py  test_api_index.py  test_api_index_duplicate_pdf.py  test_api_minimal.py  test_api_query_fallback.py  test_api_stream.py  test_api_upload.py  test_auth_jwt.py  test_backup_scripts.py  test_bench_local.py  test_budget.py  test_chunk.py  test_chunker.py  test_citations.py  test_config_fallback.py  test_db_init.py  test_dedup.py  test_embedder_bge.py  test_embedding_adapter.py  test_embedding_fallback.py  test_eval_offline.py  test_evidence_map.py  test_export.py  test_fa_normalize.py  test_fts_search.py  test_gpu_opt.py  test_guardrails.py  test_hash_version.py  test_header_footer.py  test_huffman_embed.py  test_hybrid_score.py  test_ingest.py  test_ingest_cli.py  (+33 more)
tests/data/: sample_book.json
tests/e2e/: test_answer_api_phase4.py  test_index_query_phase1.py  test_offline_mode.py  test_query_debug.py  test_retrieval_embeddings.py
tests/integration/: test_retriever_hybrid.py
tests/local_api/: test_upload_query.py
tests/scripts/: test_build_desktop.py
tests/ui/: test_upload_chat.js
ui/electron/: main.js
utils/: __init__.py  gpu_opt.py  hash.py  logging.py  pydantic_compat.py
(+2 files in other folders)
