[tool.poetry]
name = "ketabmind"
version = "0.1.0"
description = "RAG-based question answering over books"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
PyMuPDF = "^1.23.5"
tika = "^1.24"
qdrant-client = "^1.6.0"
pydantic-settings = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
ruff = "^0.2.2"
black = "^23.10.0"
mypy = "^1.8.0"
pre-commit = "^3.5.0"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry>=1.4.0"]
build-backend = "poetry.core.masonry.api"
